# traefik-auth

./: .dockerignore  .editorconfig  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.release  README.md
.github/: dependabot.yml
.github/workflows/: container-image.yaml
config/: default.yml
src/: main.rs
src/config/: mod.rs  settings.rs
src/logic/: auth_pipeline.rs  cookie.rs  crypto.rs  htpasswd.rs  mod.rs  oauth2_http_client.rs
src/providers/: base.rs  basic_auth.rs  mod.rs  oauth2.rs
src/routes/: auth_handler.rs  me_handler.rs  mod.rs  oauth2_callback_handler.rs
