[package]
name = "traefik-auth"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2", default-features = false, features = ["macros", "cookies", "secure-cookies", "compress-gzip"] }
actix-session = { version = "0.10", features = ["cookie-session"] }
async-trait = "0.1"
awc = { version = "3.0", default-features = false, features = ["compress-gzip", "openssl"] }
base64 = "0.22"
bcrypt = "0.17"
config = { version = "0.14", default-features = false, features = ["json", "yaml"] }
env_logger = { version = "0.11", default-features = false, features = ["humantime", "color", "regex"] }
josekit = "0.10"
log = { version = "0.4", features = ["std", "serde"] }
serde = "1.0"
oauth2 = { version = "5.0", default-features = false }
orion = "0.17"

[dev-dependencies]
actix-rt = "2.9"


[profile.dev]
split-debuginfo = "unpacked"


[profile.release]
lto = "thin"


[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]

[target.aarch64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]
